prevent bubbles from being too small

--- a/src/main-scss/bubble.scss
+++ b/src/main-scss/bubble.scss
@@ -16,6 +16,8 @@
 		code {
 			color: $bubble-color;
 		}
+		min-width: 22px;
+		min-height: 22px;
 		&.text {
 			max-width: 400px;
 		}
